--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -85,6 +85,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Windows.Forms.DataVisualization.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -94,6 +96,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="ZedGraph, Version=5.1.7.430, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZedGraph.5.1.7\lib\net35-Client\ZedGraph.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\Base.cs" />
@@ -131,6 +137,12 @@
     <Compile Include="Utils\MathUtil.cs" />
     <Compile Include="Utils\Serializer.cs" />
     <Compile Include="Utils\Translator.cs" />
+    <Compile Include="Views\ChartingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ChartingForm.Designer.cs">
+      <DependentUpon>ChartingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\InfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +174,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\ChartingForm.resx">
+      <DependentUpon>ChartingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\InfoForm.resx">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -228,7 +243,11 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="License-LGPL.txt" />
     <Content Include="Stock.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UIControls\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
