--- a/ValueInvesting/ValueInvesting/packages.config
+++ b/ValueInvesting/ValueInvesting/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net452" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net452" />
 </packages>
