--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -122,6 +122,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\CandleStick.cs" />
+    <Compile Include="Models\MacdPoint.cs" />
     <Compile Include="Models\Point.cs" />
     <Compile Include="Models\Stock.cs" />
     <Compile Include="Models\StockProfile.cs" />
