--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CC3123DB-0B3A-4783-A9B6-3EA34EB24A2A}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ValueInvesting</RootNamespace>
     <AssemblyName>ValueInvesting</AssemblyName>
@@ -72,6 +72,9 @@
   <PropertyGroup>
     <ApplicationIcon>Stock.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -79,6 +82,10 @@
     </Reference>
     <Reference Include="ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
       <HintPath>..\packages\ObjectListView.Official.2.9.1\lib\net20\ObjectListView.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SmartConf, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\smartconf.1.0.4.0\lib\net35\SmartConf.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -111,8 +118,10 @@
     <Compile Include="Base\Singleton.cs" />
     <Compile Include="Base\Subject.cs" />
     <Compile Include="Base\Threader.cs" />
+    <Compile Include="Commons\Config.cs" />
     <Compile Include="Commons\Enums.cs" />
     <Compile Include="Commons\Params.cs" />
+    <Compile Include="Controllers\ConfigManager.cs" />
     <Compile Include="Controllers\RESTController.cs" />
     <Compile Include="Controllers\WatchlistController.cs" />
     <Compile Include="Form1.cs">
@@ -140,6 +149,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Utils\Comparer.cs" />
+    <Compile Include="Utils\ConfigReader.cs" />
     <Compile Include="Utils\MathUtil.cs" />
     <Compile Include="Utils\Serializer.cs" />
     <Compile Include="Utils\TAUtil.cs" />
@@ -251,11 +261,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+    <Content Include="Settings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Stock.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UIControls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
