--- a/ValueInvesting/ValueInvesting/packages.config
+++ b/ValueInvesting/ValueInvesting/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net452" />
+  <package id="smartconf" version="1.0.4.0" targetFramework="net452" />
   <package id="TA-Lib" version="0.5.0.3" targetFramework="net452" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net452" />
 </packages>
