--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -276,6 +276,7 @@
     <Content Include="Stocks\SGX.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
