--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -119,6 +119,8 @@
   <ItemGroup>
     <Compile Include="Algorithms\Ema20CrossEma40.cs" />
     <Compile Include="Algorithms\Ema40CrossEma20.cs" />
+    <Compile Include="Algorithms\HammerReversal.cs" />
+    <Compile Include="Algorithms\HangingManReversal.cs" />
     <Compile Include="Algorithms\IRuleInterface.cs" />
     <Compile Include="Algorithms\MacdCrossAboveZero.cs" />
     <Compile Include="Algorithms\MacdCrossBelowZero.cs" />
@@ -135,6 +137,8 @@
     <Compile Include="Algorithms\StochasticCrossBelow.cs" />
     <Compile Include="Algorithms\StochasticOverBought.cs" />
     <Compile Include="Algorithms\StochasticOverSold.cs" />
+    <Compile Include="Algorithms\WilliamROverBought.cs" />
+    <Compile Include="Algorithms\WilliamROverSold.cs" />
     <Compile Include="Base\Base.cs" />
     <Compile Include="Base\Observer.cs" />
     <Compile Include="Base\Singleton.cs" />
