--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -171,6 +171,9 @@
     <Compile Include="Parsers\YahooFinanceParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\StrengthRenderer.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Renderers\PriceRenderer.cs">
       <SubType>Component</SubType>
     </Compile>
