--- a/ValueInvesting/ValueInvesting/ValueInvesting.csproj
+++ b/ValueInvesting/ValueInvesting/ValueInvesting.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Parsers\EodDataSymbolsParser.cs" />
     <Compile Include="Parsers\JittaParser.cs" />
     <Compile Include="Parsers\MorningStarParser.cs" />
+    <Compile Include="Parsers\ReutersParser.cs" />
     <Compile Include="Parsers\YahooFinanceCurrencyParser.cs" />
     <Compile Include="Parsers\YahooFinanceDownloader.cs" />
     <Compile Include="Parsers\YahooFinanceParser.cs" />
